--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/item_add"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/menu_addPlacemark"
+        android:title="@string/menu_addLocation"
         app:showAsAction="always" />
 </menu>
