--- a/app/src/main/res/menu/menu_cancel.xml
+++ b/app/src/main/res/menu/menu_cancel.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/item_cancel"
-        android:text="CANCEL"
+        android:text="@string/menu_cancel"
         android:title="@string/menu_cancel"
         app:showAsAction="always" />
 </menu>
